<resources>
    <string name="app_name">StoretoDoor</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="city">City</string>
    <string name="Mobile_No">Mobile No</string>
    <string name="About">About</string>
    <string name="Write_something_about_you">Write something about you</string>
    <string name="Experience">Experience</string>
    <string name="Education">Education</string>
    <string name="email">Email</string>
    <string name="SignUp">SignUp</string>
    <string name="password">Password</string>
    <string name="cpassword">Confirm Password</string>
    <string name="Dob">Date of birth</string>
    <string name="Login_btn">Login</string>
    <string name="drawer_open">Open Drawer Menu</string>
    <string name="drawer_close">Close Drawer Menu</string>
</resources>