<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.updateprofile">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="408dp"
        android:layout_height="665dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_profile_toolbar"
        tools:ignore="UnknownId">

        <RelativeLayout
            android:id="@+id/relative_layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/profilePic"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="0dp"
                android:background="@drawable/addprofile"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/change_profile_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/profilePic"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:text="change profile"
                android:textSize="16sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/firstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/change_profile_btn"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/round_corner"
                android:drawableLeft="@drawable/name"
                android:drawablePadding="15dp"
                android:hint="@string/first_name"
                android:padding="3dp"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/lastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/firstName"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/round_corner"
                android:drawableLeft="@drawable/name"
                android:drawablePadding="15dp"
                android:hint="@string/last_name"
                android:padding="3dp"
                android:textSize="20sp" />


            <EditText
                android:id="@+id/city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lastName"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/round_corner"
                android:drawableLeft="@drawable/city"
                android:drawablePadding="15dp"
                android:drawableTint="@color/black"
                android:hint="@string/city"
                android:padding="3dp"
                android:textSize="20sp" />



            <EditText
                android:id="@+id/mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:drawableLeft="@drawable/mobile"
                android:drawablePadding="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:layout_below="@id/city"
                android:background="@drawable/round_corner"
                android:hint="@string/Mobile_No"
                android:inputType="phone"
                android:padding="3dp" />



            <TextView
                android:id="@+id/about_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mobile"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="10dp"
                android:padding="3dp"
                android:text="@string/About"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edt_about_me"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/about_tv"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/round_corner"
                android:hint="@string/Write_something_about_you"
                android:paddingLeft="15dp"
                android:paddingTop="3dp"
                android:paddingRight="10dp"
                android:paddingBottom="3dp"
                android:textSize="20sp" />


            <Button
                android:id="@+id/btn_save"
                android:layout_marginTop="50dp"
                android:layout_width="202dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/edt_about_me"
                android:layout_centerHorizontal="true"
                android:backgroundTint="@color/mainapp"
                android:text="Save &amp; Continue"
                android:textSize="20sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>